<resources>
    <string name="app_name">天气</string>
    <string name="geometric_weather">Geometric Weather</string>
    <string name="package_name">wangdaye.com.geometricweather</string>
    <string name="version_code">版本号\n4.1.1</string>
    <string name="note">代码注释\n修复：修复了由于api变更导致的fc问题\n修改：每周天气由7天改为5天\n说明：由于聚合数据那边的接口变动，导致出现了fc的现象，一周预览数据也从7天变成了5天。</string>
    <string name="introduce_text_1">欢迎使用 Geometric Weather\n以下为几项提醒</string>
    <string name="introduce_text_2">点击卡片中的地名可进入地址管理\n点击卡片中的圆形图标可收藏地址/取消收藏</string>
    <string name="introduce_text_3">点击天气折线图可切换一周天气/小时天气\n左右滑动可切换城市</string>
    <string name="introduce_text_4">若出现天空无限绘制的情况\n请将app加入XP导航栏变色框架的黑名单中</string>
    <string name="local">本地</string>
    <string name="live">实时</string>
    <string name="refresh_at">更新于</string>
    <string name="week_weather">天气概览</string>
    <string name="life_details">生活信息</string>
    <string name="pm_25">PM2.5</string>
    <string name="pm_10">PM10</string>
    <string name="pm_level">颗粒物等级</string>
    <string name="humidity">湿度</string>
    <string name="uv">紫外线</string>
    <string name="dressing_index">穿衣指数</string>
    <string name="cold_index">感冒指数</string>
    <string name="aqi">污染指数</string>
    <string name="wash_car_index">洗车指数</string>
    <string name="exercise_index">运动指数</string>
    <string name="visibility">能见度</string>
    <string name="sun_rise">日出</string>
    <string name="sun_fall">日落</string>
    <string name="apparent_temp">体感温度</string>
    <string name="maxi_temp">高温</string>
    <string name="mini_temp">低温</string>
    <string name="temp">温度</string>
    <string name="pops">降水概率</string>
    <string name="yesterday_data">昨日气温</string>
    <string name="time">时间</string>
    <string name="powered_by_juhe">powered by Juhe.cn</string>
    <string name="powered_by_hefeng">powered by heweather.com</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="next">下一步</string>
    <string name="manage">地址管理</string>
    <string name="no_data">暂无数据</string>
    <string name="share_info">from Geometric Weather</string>
    <string name="level">级</string>
    <string name="use_local_as_example">以默认位置天气为例，以实际所选地址为准</string>
    <string name="air">空气</string>
    <string name="dialog_title">选择地址或搜索…</string>
    <string name="default_location">默认位置</string>
    <string name="lab">实验室</string>
    <string name="forecast">预报</string>
    <string name="widget">小部件</string>
    <string name="notification">通知</string>
    <string name="choose_location">选择位置</string>
    <string name="show_widget_card">卡片背景</string>
    <string name="dark_widget_card">暗色卡片</string>
    <string name="hide_refresh_time">隐藏刷新时间</string>
    <string name="black_text">暗色字体</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>
    <string name="introduce">介绍\n点击查看介绍</string>
    <string name="tech">技术</string>
    <string name="tech_location">定位支持\ndeveloper.baidu.com</string>
    <string name="tech_weatherAPI">天气支持\nJuhe.cn\nheweather.com</string>
    <string name="tech_json">json解析\ngithub.com/google/gson</string>
    <string name="tech_charToPinyin">文字拼音转换\npinyin4j.sourceforge.net</string>
    <string name="thanks">感谢</string>
    <string name="thanks_info_roommate">感谢\n舍友高老巴子带我入坑</string>
    <string name="thanks_info_ssp">感谢\n少数派进行的推荐</string>
    <string name="thanks_info_mi">感谢\n小米金米奖及小米应用商店的认领邀请</string>
    <string name="author">作者</string>
    <string name="gitHub">gitHub\ngithub.com/WangDaYeeeeee/GeometricWeather</string>
    <string name="email">email\nwangdayeeeeee@gmail.com\nyuyidong2015@gmail.com</string>
    <string name="author_message">欢迎向作者反应bug\n欢迎提供更好的免费（或低价）天气api</string>
    <string name="yesterday">昨日</string>
    <string name="today">今日</string>
    <string name="tomorrow">明日</string>
    <string name="week">周</string>
    <string name="week_1">周一</string>
    <string name="week_2">周二</string>
    <string name="week_3">周三</string>
    <string name="week_4">周四</string>
    <string name="week_5">周五</string>
    <string name="week_6">周六</string>
    <string name="week_7">周日</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_collect">收藏该地址</string>
    <string name="action_share">分享天气</string>
    <string name="nav_manage">@string/manage</string>
    <string name="nav_settings">@string/settings</string>
    <string name="nav_about">@string/about</string>
    <string name="request_competence_succeed">获取权限成功</string>
    <string name="request_competence_failed">获取权限失败</string>
    <string name="get_location_failed">定位失败，请检查权限和网络连接</string>
    <string name="get_weather_data_failed">获取天气数据失败</string>
    <string name="send_notification_error">发送天气通知失败，请检查网络环境</string>
    <string name="refresh_widget_error">刷新小部件失败，请检查网络环境</string>
    <string name="null_widget_id">无效的widget id</string>
    <string name="first_refresh_widget">小部件第一次刷新数据可能会有些慢</string>
    <string name="share_error">分享失败\n请检查网络情况</string>
    <string name="touch_to_retry">点击重试</string>
    <string name="collect_failed">地址已存在</string>
    <string name="collect_succeed">收藏成功</string>
    <string name="delete_succeed">删除成功</string>
    <string name="location_list_cannot_be_null">收藏地址不能为空</string>
    <string name="search_null">地址为空</string>
    <string name="refresh_notification_after_back">返回主页后刷新通知</string>
    <string name="refresh_notification_now">立即刷新通知</string>
    <string name="please_refresh">下次刷新后生效</string>
    <string name="widget_day">@string/today</string>
    <string name="widget_week">一周</string>
    <string name="widget_day_week">今日+一周</string>
    <string name="widget_clock_day">时钟+今日</string>
    <string name="widget_clock_day_center">时钟+今日(轴对称)</string>
    <string name="widget_clock_day_week">时钟+今日+一周</string>
    <string name="wait_refresh">等待更新</string>
    <string name="ellipsis">…</string>
    <string name="hide_star">隐藏星空</string>
    <string name="hide_star_summary_on">目前状态可减少卡顿</string>
    <string name="hide_star_summary_off">目前状态将消耗更多资源</string>
    <string name="navigation_bar_color_switch">导航栏着色(5.0+)</string>
    <string name="navigation_bar_color_switch_on">导航栏显示主题颜色</string>
    <string name="navigation_bar_color_switch_off">导航栏显示黑色</string>
    <string name="timing_forecast_switch_today">定时预报(今日)</string>
    <string name="set_forecast_time_today">设定预报时间(今日)</string>
    <string name="set_forecast_time_summary_today">建议避免设定在00:00附近</string>
    <string name="set_forecast_type_today">设定预报类型(今日)</string>
    <string name="timing_forecast_switch_tomorrow">定时预报(明日)</string>
    <string name="set_forecast_time_tomorrow">设定预报时间(明日)</string>
    <string name="set_forecast_type_tomorrow">设定预报类型(明日)</string>
    <string-array
        name="forecast_type_list">
        <item>简单预报风格</item>
        <item>天气通知风格</item>
    </string-array>
    <string-array
        name="forecast_type_key">
        <item>simple_forecast</item>
        <item>notification</item>
    </string-array>
    <string name="forecast_type_default">simple_forecast</string>
    <string name="widget_time_title">小部件刷新频率</string>
    <string name="widget_time_summary">设置小部件的刷新频率</string>
    <string-array
        name="widget_time_list">
        <item>1小时</item>
        <item>2小时</item>
        <item>3小时</item>
        <item>4小时</item>
    </string-array>
    <string-array
        name="widget_time_key">
        <item>1hour</item>
        <item>2hours</item>
        <item>3hours</item>
        <item>4hours</item>
    </string-array>
    <string name="widget_time_default">2hours</string>
    <string name="notification_switch">开启天气通知</string>
    <string name="notification_text_color">天气通知字体颜色</string>
    <string name="notification_text_color_summary">选择天气通知的字体颜色</string>
    <string-array
        name="notification_text_color_list">
        <item>深色</item>
        <item>灰色</item>
        <item>亮色</item>
    </string-array>
    <string-array
        name="notification_text_color_key">
        <item>dark</item>
        <item>grey</item>
        <item>light</item>
    </string-array>
    <string name="notification_text_color_default">grey</string>
    <string name="notification_background_color_switch">天气通知背景着色</string>
    <string name="notification_background_color_switch_on">aosp快捷设置面板风格</string>
    <string name="notification_background_color_switch_off">跟随系统默认</string>
    <string name="notification_can_clear_switch">天气通知可被清除</string>
    <string name="notification_can_clear_on">天气通知可被清除</string>
    <string name="notification_can_clear_off">天气通知常驻通知栏</string>
    <string name="hide_notification_icon">隐藏通知图标</string>
    <string name="hide_notification_icon_summary_on">将隐藏状态栏上的天气图标</string>
    <string name="hide_notification_icon_summary_off">将在状态栏上显示图标</string>
    <string name="hide_notification_in_lockScreen">隐藏锁屏通知(5.0+)</string>
    <string name="hide_notification_in_lockScreen_summary_on">在锁屏界面隐藏通知</string>
    <string name="hide_notification_in_lockScreen_summary_off">在锁屏界面显示通知</string>
    <string name="notification_auto_refresh_switch">自动更新通知</string>
    <string name="notification_auto_refresh_on">将自动更新通知</string>
    <string name="notification_auto_refresh_off">只在开启app后刷新通知数据</string>
    <string name="notification_refresh_time">天气通知刷新频率</string>
    <string name="notification_refresh_time_summary">选择天气通知刷新的频率</string>
    <string-array
        name="notification_refresh_time_list">
        <item>1小时</item>
        <item>2小时</item>
        <item>3小时</item>
        <item>4小时</item>
    </string-array>
    <string-array
        name="notification_refresh_time_key">
        <item>1hour</item>
        <item>2hours</item>
        <item>3hours</item>
        <item>4hours</item>
    </string-array>
    <string name="notification_refresh_time_default">2hours</string>
    <string name="notification_refresh_sound_switch">声音提醒</string>
    <string name="notification_refresh_shock_switch">震动提醒</string>
    <string name="switch_on">开启</string>
    <string name="switch_off">关闭</string>
    <string name="sp_widget_day_setting">widget_day_setting</string>
    <string name="sp_widget_week_setting">widget_week_setting</string>
    <string name="sp_widget_day_week_setting">widget_day_week_setting</string>
    <string name="sp_widget_clock_day_setting">widget_clock_day_setting</string>
    <string name="sp_widget_clock_day_center_setting">widget_clock_day_center_setting</string>
    <string name="sp_widget_clock_day_week_setting">widget_clock_day_week_setting</string>
    <string name="key_enable">enable</string>
    <string name="key_location">location</string>
    <string name="key_show_card">showCard</string>
    <string name="key_hide_refresh_time">show_refresh_time</string>
    <string name="key_black_text">black_text</string>
    <string name="key_isDay">isDay</string>
    <string name="key_shared">shared</string>
    <string name="key_share_uri">share_uri</string>
    <string name="key_introduce_version_code">introduce_version_code</string>
    <string name="key_hide_star">hide_star</string>
    <string name="key_navigation_bar_color_switch">navigation_bar_color_switch</string>
    <string name="key_timing_forecast_switch_today">timing_forecast_switch_today</string>
    <string name="key_forecast_time_today">forecast_time_today</string>
    <string name="key_forecast_type_today">forecast_type_today</string>
    <string name="key_timing_forecast_switch_tomorrow">timing_forecast_switch_tomorrow</string>
    <string name="key_forecast_time_tomorrow">forecast_time_tomorrow</string>
    <string name="key_forecast_type_tomorrow">forecast_type_tomorrow</string>
    <string name="key_widget_time">widget_time</string>
    <string name="key_notification_switch">notification_switch</string>
    <string name="key_notification_text_color">notification_text_color</string>
</resources>