<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/material_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/container_about_app_icon"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:layout_margin="@dimen/card_info_margin"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                tools:src="@drawable/ic_launcher"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:layout_toRightOf="@id/container_about_app_icon"
                android:layout_centerVertical="true"
                android:text="@string/app_name"
                android:textColor="?attr/colorAccent"
                style="@style/large_title_text"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/container_about_app_version_icon"
                android:src="@drawable/ic_code"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                style="@style/material_icon"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:layout_toRightOf="@id/container_about_app_version_icon"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/card_info_margin"
                android:layout_marginRight="@dimen/card_info_margin"
                android:layout_marginBottom="@dimen/card_info_margin"
                style="@style/content_text"
                android:text="@string/version_code"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_about_app_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/container_about_app_introduce_icon"
                android:src="@drawable/ic_introduce"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                style="@style/material_icon"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:layout_toRightOf="@id/container_about_app_introduce_icon"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/card_info_margin"
                android:layout_marginRight="@dimen/card_info_margin"
                android:layout_marginBottom="@dimen/card_info_margin"
                style="@style/content_text"
                android:text="@string/introduce"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/container_about_app_log_icon"
                android:src="@drawable/ic_remark"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                style="@style/material_icon"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:layout_toRightOf="@id/container_about_app_log_icon"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/card_info_margin"
                android:layout_marginRight="@dimen/card_info_margin"
                android:layout_marginBottom="@dimen/card_info_margin"
                style="@style/content_text"
                android:text="@string/note"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>